背景色提取

--- a/pages/backgroundColorSync.html
+++ b/pages/backgroundColorSync.html
@@ -41,7 +41,7 @@
 </span>
 <img src="../images/4.jpg" data-adaptive-background='1'>
 </div>
-</div>
+</div>m
 <div class='image-wrapper'>
 <div class='inner'>
 <span class='color'>
