--- a/pages/grid.html
+++ b/pages/grid.html
@@ -12,7 +12,7 @@
         }
         body{
             display: grid;
-            height: 100vh;
+            height: 800px;
             grid-template-rows: auto 1fr auto;
         }
         header{
