--- a/pages/变量CSS.html
+++ b/pages/变量CSS.html
@@ -7,14 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>变量CSS</title>
     <style>
-        :root{
+        :root {
             --fz: 20px;
             --color: gold;
         }
-        h1{
+
+        h1 {
             font-size: var(--fz);
         }
-        img{
+
+        img {
             border: 12px solid var(--color);
         }
     </style>
@@ -30,13 +32,13 @@
 
 </html>
 <script>
-    const textBox = document.querySelector('html'); 
+    const textBox = document.querySelector('html');
     //GET 
-    const Bxshc = getComputedStyle(textBox).getPropertyValue('--fz'); 
+    const Bxshc = getComputedStyle(textBox).getPropertyValue('--fz');
     // SET 
     setTimeout(() => {
-    textBox.style.setProperty('--fz', '50px');
-        
+        document.querySelector('html').style.setProperty('--fz', '50px');
+
     }, 1000);
     console.log(Bxshc);
 </script>
